base/callback_unittest.cc
@@ -24,18 +24,23 @@ void NopInvokeFunc() {}
 // chance of colliding with another instantiation and breaking the
 // one-definition-rule.
 struct FakeBindState : internal::BindStateBase {
-  FakeBindState()
-      : BindStateBase(&NopInvokeFunc, &Destroy, &IsCancelled, &MaybeValid) {}
+  FakeBindState() : BindStateBase(&NopInvokeFunc, &Destroy, &IsCancelled) {}
 
  private:
   ~FakeBindState() = default;
   static void Destroy(const internal::BindStateBase* self) {
     delete static_cast<const FakeBindState*>(self);
   }
-  static bool IsCancelled(const internal::BindStateBase*) {
-    return false;
+  static bool IsCancelled(const internal::BindStateBase*,
+                          internal::BindStateBase::CancellationQueryMode mode) {
+    switch (mode) {
+      case internal::BindStateBase::IS_CANCELLED:
+        return false;
+      case internal::BindStateBase::MAYBE_VALID:
+        return true;
+    }
+    NOTREACHED();
   }
-  static bool MaybeValid(const internal::BindStateBase*) { return true; }
 };
 
 namespace {
